<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headCharInfo"
        android:textSize="22sp"
        />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hintPlayerName"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hintCharName"
                android:inputType="textPersonName" >
            </EditText>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/genderList"
                android:prompt="@string/promptGenderName"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hintDefiningCharacteristics"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hintCharHeight" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hintCharWeight" />
            <Spinner
        		android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        		android:entries="@array/raceList"
        		android:prompt="@string/promptRaceList"
        		android:spinnerMode="dialog"
        		android:layout_marginBottom ="4dp" />

    		<Button
        		android:id="@+id/button1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:text="@string/nextButton1"
        		android:onClick="onSaveButtonClick" />
        </LinearLayout>
    </ScrollView>

    

</RelativeLayout>