<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headCharInfo2"
        android:textSize="22sp"
        />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >    

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/archetypeList"
                android:prompt="@string/promptArchetype" />


            <Spinner
        		android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        		android:entries="@array/careerList"
        		android:prompt="@string/promptCareer1" />
                        
            <Spinner
        		android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        		android:entries="@array/careerList"
        		android:prompt="@string/promptCareer1"
        		android:layout_marginBottom ="4dp" />

    		<Button
        		android:id="@+id/button1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:text="@string/nextButton1"
        		android:onClick="onSaveButtonClick" />
        </LinearLayout>
    </ScrollView>

    

</RelativeLayout>